# facturacion-electronica

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dependencies.sh  foo-out.xml  sealed.xml  test(backup).xml  test.xml
.github/: FUNDING.yml
assets/: cadenaoriginal1.xslt  cfdv33.xsd  encryp.cs  tdCFDI.xsd
assets/catalogos sat 3.3 por hdeleon.net/: creditos.txt
include/: catCFDI.hpp  catCFDI.hxx  cfdv33.hpp  cfdv33.hxx  ssl_functions.hpp  tdCFDI.hpp  tdCFDI.hxx
internal_libs/: CMakeLists.txt
src/: cfdv33.cpp  cfdv33.cxx  main.cpp  ssl_functions.cpp  tdCFDI.cpp  tdCFDI.cxx
